added project descriptions

--- a/test_output.html
+++ b/test_output.html
@@ -83,7 +83,7 @@
         lyric vision
        </h5>
        <p class="card-text">
-        Info about lyric vision
+        A mobile app that generates lyric-inspired artwork from a given song
        </p>
        <button class="btn btn-primary" data-bs-target="#lyric-vision" data-bs-toggle="modal">
         More
@@ -99,7 +99,7 @@
         🎵 song-to-image
        </h5>
        <p class="card-text">
-        Info about 🎵 song-to-image
+        An app to generate lyric-inspired images using stable diffusion
        </p>
        <button class="btn btn-primary" data-bs-target="#🎵-song-to-image" data-bs-toggle="modal">
         More
@@ -115,7 +115,7 @@
         ImageFolder-relabel
        </h5>
        <p class="card-text">
-        Info about ImageFolder-relabel
+        An image-labelling toolkit for Python's ImageFolder framework
        </p>
        <button class="btn btn-primary" data-bs-target="#imagefolder-relabel" data-bs-toggle="modal">
         More
@@ -131,7 +131,7 @@
         Dancing Spider
        </h5>
        <p class="card-text">
-        Info about Dancing Spider
+        Generate 30-second video summaries for podcasts
        </p>
        <button class="btn btn-primary" data-bs-target="#dancing-spider" data-bs-toggle="modal">
         More
