--- a/projects.html
+++ b/projects.html
@@ -195,7 +195,7 @@
         classification-model-comparison
        </h5>
        <p class="card-text">
-        A classification model comparison toolkit
+        A model comparison toolkit
        </p>
        <button class="btn btn-primary" data-bs-target="#classification-model-comparison" data-bs-toggle="modal">
         More
