changed project card button colour

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
        <p class="card-text">
         Generate 30-second video summaries for podcasts
        </p>
-       <button class="btn btn-primary" data-bs-target="#dancing-spider" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#dancing-spider" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -101,7 +101,7 @@
        <p class="card-text">
         A mobile app that generates lyric-inspired artwork from a given song
        </p>
-       <button class="btn btn-primary" data-bs-target="#lyric-vision" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#lyric-vision" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -117,7 +117,7 @@
        <p class="card-text">
         An app to generate lyric-inspired images using stable diffusion
        </p>
-       <button class="btn btn-primary" data-bs-target="#🎵-song-to-image" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#🎵-song-to-image" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -133,7 +133,7 @@
        <p class="card-text">
         An image-labelling toolkit for Python's ImageFolder framework
        </p>
-       <button class="btn btn-primary" data-bs-target="#imagefolder-relabel" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#imagefolder-relabel" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -149,7 +149,7 @@
        <p class="card-text">
         A DL image classification toolkit/webscraping exploration
        </p>
-       <button class="btn btn-primary" data-bs-target="#sausage-classifier" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#sausage-classifier" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -165,7 +165,7 @@
        <p class="card-text">
         A simple cmd tool for solving Wordle puzzles
        </p>
-       <button class="btn btn-primary" data-bs-target="#wordle-solver" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#wordle-solver" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -181,7 +181,7 @@
        <p class="card-text">
         A cross-platform logging app for a clinical research trial
        </p>
-       <button class="btn btn-primary" data-bs-target="#care4cf" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#care4cf" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
@@ -197,7 +197,7 @@
        <p class="card-text">
         A model comparison toolkit
        </p>
-       <button class="btn btn-primary" data-bs-target="#classification-model-comparison" data-bs-toggle="modal">
+       <button class="btn btn-primary" data-bs-target="#classification-model-comparison" data-bs-toggle="modal" style="background-color: #C78226; border: 1px solid black;">
         More
        </button>
       </div>
