added publications compiler and contents

--- a/projects.html
+++ b/projects.html
@@ -878,11 +878,11 @@
           <code>
            image_queries.json
           </code>
-          file, and the images are written to a directory structure to suit Pytorch’s
+          file, and the images are written to a directory structure to suit Pytorch's
           <code>
            ImageFolder
           </code>
-          dataset framework. I’ve pitched this as a sausage-detection model, but could just as easily be an anything-detection model depending on how you populate the
+          dataset framework. I've pitched this as a sausage-detection model, but could just as easily be an anything-detection model depending on how you populate the
           <code>
            image_queries.json
           </code>
@@ -915,7 +915,7 @@
          </ul>
          <ul class="bulleted-list" id="8e93b707-0936-489c-ad24-5f025a55207b">
           <li style="list-style-type:disc">
-           Flag or remove duplicate images, potentially using SciKit’s
+           Flag or remove duplicate images, potentially using SciKit's
            <code>
             cosine_similarity
            </code>
@@ -923,7 +923,7 @@
            <code>
             imagehash
            </code>
-           library’s
+           library's
            <code>
             average_hash
            </code>
