styling navbar active

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">ABOUT ME</a>
+        <a class="nav-item nav-link active" style="border-bottom: 3px solid #ffffff;" href="#">ABOUT ME</a>
         <a class="nav-item nav-link" href="/projects.html">PROJECTS</a>
         <a class="nav-item nav-link" href="/publications.html">PUBLICATIONS</a>
         <a class="nav-item nav-link" href="/influences.html">INFLUENCES</a>
