--- a/influences.html
+++ b/influences.html
@@ -36,7 +36,7 @@
             <a class="nav-item nav-link" href="/about.html">ABOUT ME</a>
             <a class="nav-item nav-link" href="/about.html">PROJECTS</a>
             <a class="nav-item nav-link" href="/publications.html">PUBLICATIONS</a>
-            <a class="nav-item nav-link active" href="#">INFLUENCES</a>
+            <a class="nav-item nav-link active" style="border-bottom: 3px solid #ffffff;" href="#">INFLUENCES</a>
           </div>
     
         </div> 
