--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
      <a class="nav-item nav-link" href="/about.html">
       ABOUT ME
      </a>
-     <a class="nav-item nav-link active" href="#">
+     <a class="nav-item nav-link active" style="border-bottom: 3px solid #ffffff;" href="#">
       PROJECTS
      </a>
      <a class="nav-item nav-link" href="/publications.html">
