added influences info

--- a/influences.html
+++ b/influences.html
@@ -41,14 +41,19 @@
     
         </div> 
     </nav>
-    <div style="height: 90vh">
-        <h1 style="padding:20px">Influences</h1>
-        <br>
-        <br>
-        <p style="padding:20px">Coming soon...</p>
 
-    
+    <div ,="" class="jumbotron jumbotron-fluid with-gradient" id="title_jumbotron">
+      <div class="container">
+       <h1 class="display-4">
+        INFLUENCES
+       </h1>
+       <p class="copy-text">
+        A selection of writing that has influenced me one way or another. 
+       </p>
+       <hr class="my-4"/>
+      </div>
     </div>
+
     <div class="footer">
         <p>Designed and built by Jordan Smith using plain old HTML and CSS</p>
     </div>
