--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
      <a class="nav-item nav-link" href="/projects.html">
       PROJECTS
      </a>
-     <a class="nav-item nav-link active" href="#">
+     <a class="nav-item nav-link active" style="border-bottom: 3px solid #ffffff;"  href="#">
       PUBLICATIONS
      </a>
      <a class="nav-item nav-link" href="/influences.html">
@@ -68,9 +68,11 @@
      <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="publications/publication_images/Untitled_1_titlecard.png" width="700"/>
     </div>
     <div class="col-12 col-md-6 custom-text-width">
-     <p class="copy-text" style="font-weight: bold">
-      Real-World Performance of Autonomously Reporting Normal Chest Radiographs in NHS Trusts Using a Deep Learning Algorithm on the GP Pathway (2023)
-     </p>
+      <span>
+        <p class="copy-text" style="font-weight: bold">
+          Real-World Performance of Autonomously Reporting Normal Chest Radiographs in NHS Trusts Using a Deep Learning Algorithm on the GP Pathway (2023)
+         </p>
+      </span>
      <p class="copy-text">
       Jordan Smith, Tom Naunton Morgan, Paul Williams, Qaiser Malik, Simon Rasalingham
      </p>
@@ -159,7 +161,7 @@
         </i>
        </button>
       </a>
-      <span class="selected-value select-value-color-grey">
+      <span class="selected-value select-value-color-orange">
        Professional Blog
       </span>
      </div>
@@ -185,7 +187,7 @@
         </i>
        </button>
       </a>
-      <span class="selected-value select-value-color-grey">
+      <span class="selected-value select-value-color-orange">
        Professional Blog
       </span>
      </div>
@@ -211,7 +213,7 @@
         </i>
        </button>
       </a>
-      <span class="selected-value select-value-color-grey">
+      <span class="selected-value select-value-color-orange">
        Professional Blog
       </span>
      </div>
@@ -237,7 +239,7 @@
         </i>
        </button>
       </a>
-      <span class="selected-value select-value-color-grey">
+      <span class="selected-value select-value-color-orange">
        Professional Blog
       </span>
      </div>
@@ -263,7 +265,7 @@
         </i>
        </button>
       </a>
-      <span class="selected-value select-value-color-orange">
+      <span class="selected-value select-value-color-blue">
        Dev Blog
       </span>
      </div>
