--- a/about.html
+++ b/about.html
@@ -144,7 +144,10 @@
        </p>
        <br>
        <p class="lead">
-        <a class="btn btn-primary btn-sm" href="/assets/Jordan_Smith_CV_2023_9.pdf" role="button" style="background-color: #C78226; border: 1px solid black; " download>Download CV</a>
+        <a class="btn btn-primary btn-sm" href="/assets/Jordan_Smith_CV_2023_9.pdf" role="button" style="background-color: #C78226; border: 1px solid black; " download>
+          <i class="bi bi-file-earmark-arrow-down-fill" style="font-size:large"></i>
+          CV
+        </a>
       </p>
       <hr class="my-4">
     </div>
