--- a/influences.html
+++ b/influences.html
@@ -65,6 +65,70 @@
   <div class="container col-xxl-8 px-4" style="background-color: #ffffff; padding-top: 1rem; padding-bottom: 1rem; margin-top: 10px; margin-bottom: 10px;">
    <div class="row align-items-center">
     <div class="col-12 col-md-6 custom-im-width">
+     <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="influences/influences_images/macleanjones_titlecard.png" width="700"/>
+    </div>
+    <div class="col-12 col-md-6 custom-text-width">
+     <p class="copy-text" style="font-weight: bold">
+      Listen Better: Notes on Building an Attentive Startup
+     </p>
+     <p class="copy-text">
+      Aled Maclean-Jones
+     </p>
+     <p class="copy-text" style="font-size: small; color: grey">
+      October 20, 2023
+     </p>
+     <div class="d-flex flex-wrap align-items-center">
+      <a href="https://ashore.io/journal/desk-notes/listen-better-notes-on-building-an-attentive-startup" target="_blank">
+       <button class="btn btn-primary btn-md px-4 me-2" style="background-color: #C78226; border: 1px solid black;" type="button">
+        <i class="bi bi-book">
+        </i>
+       </button>
+      </a>
+      <span class="selected-value select-value-color-red">
+       Article
+      </span>
+      <span class="selected-value select-value-color-green">
+       Building
+      </span>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="container col-xxl-8 px-4" style="background-color: #ffffff; padding-top: 1rem; padding-bottom: 1rem; margin-top: 10px; margin-bottom: 10px;">
+   <div class="row align-items-center">
+    <div class="col-12 col-md-6 custom-im-width">
+     <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="influences/influences_images/andreesen_titlecard.png" width="700"/>
+    </div>
+    <div class="col-12 col-md-6 custom-text-width">
+     <p class="copy-text" style="font-weight: bold">
+      The Techno-Optimist Manifesto
+     </p>
+     <p class="copy-text">
+      Marc Andreesen
+     </p>
+     <p class="copy-text" style="font-size: small; color: grey">
+      October 16, 2023
+     </p>
+     <div class="d-flex flex-wrap align-items-center">
+      <a href="https://a16z.com/the-techno-optimist-manifesto/" target="_blank">
+       <button class="btn btn-primary btn-md px-4 me-2" style="background-color: #C78226; border: 1px solid black;" type="button">
+        <i class="bi bi-book">
+        </i>
+       </button>
+      </a>
+      <span class="selected-value select-value-color-red">
+       Article
+      </span>
+      <span class="selected-value select-value-color-yellow">
+       Acceleration
+      </span>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="container col-xxl-8 px-4" style="background-color: #ffffff; padding-top: 1rem; padding-bottom: 1rem; margin-top: 10px; margin-bottom: 10px;">
+   <div class="row align-items-center">
+    <div class="col-12 col-md-6 custom-im-width">
      <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="influences/influences_images/jukic_titlecard.png" width="700"/>
     </div>
     <div class="col-12 col-md-6 custom-text-width">
@@ -87,8 +151,8 @@
       <span class="selected-value select-value-color-red">
        Article
       </span>
-      <span class="selected-value select-value-color-green">
-       Growth
+      <span class="selected-value select-value-color-yellow">
+       Acceleration
       </span>
      </div>
     </div>
@@ -121,6 +185,38 @@
       </span>
       <span class="selected-value select-value-color-blue">
        Digital Philosophy
+      </span>
+     </div>
+    </div>
+   </div>
+  </div>
+  <div class="container col-xxl-8 px-4" style="background-color: #ffffff; padding-top: 1rem; padding-bottom: 1rem; margin-top: 10px; margin-bottom: 10px;">
+   <div class="row align-items-center">
+    <div class="col-12 col-md-6 custom-im-width">
+     <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="influences/influences_images/graham_titlecard.png" width="700"/>
+    </div>
+    <div class="col-12 col-md-6 custom-text-width">
+     <p class="copy-text" style="font-weight: bold">
+      How To Do Great Work
+     </p>
+     <p class="copy-text">
+      Paul Graham
+     </p>
+     <p class="copy-text" style="font-size: small; color: grey">
+      July 01, 2023
+     </p>
+     <div class="d-flex flex-wrap align-items-center">
+      <a href="http://www.paulgraham.com/greatwork.html" target="_blank">
+       <button class="btn btn-primary btn-md px-4 me-2" style="background-color: #C78226; border: 1px solid black;" type="button">
+        <i class="bi bi-book">
+        </i>
+       </button>
+      </a>
+      <span class="selected-value select-value-color-red">
+       Article
+      </span>
+      <span class="selected-value select-value-color-green">
+       Building
       </span>
      </div>
     </div>
@@ -215,8 +311,8 @@
       <span class="selected-value select-value-color-red">
        Article
       </span>
-      <span class="selected-value select-value-color-green">
-       Growth
+      <span class="selected-value select-value-color-yellow">
+       Acceleration
       </span>
      </div>
     </div>
