--- a/influences.html
+++ b/influences.html
@@ -368,6 +368,40 @@
     </div>
    </div>
   </div>
+  <div class="container col-xxl-8 px-4" style="background-color: #ffffff; padding-top: 1rem; padding-bottom: 1rem; margin-top: 10px; margin-bottom: 10px;">
+   <div class="row align-items-center">
+    <div class="col-12 col-md-6 custom-im-width">
+     <a href="https://www.amazon.co.uk/Machine-Stops-M-Forster/dp/1434442047" target="_blank">
+      <img alt="Bootstrap Themes" class="d-block mx-lg-auto img-fluid" height="500" loading="lazy" src="influences/influences_images/forster_titlecard.png" width="700"/>
+     </a>
+    </div>
+    <div class="col-12 col-md-6 custom-text-width">
+     <p class="copy-text" style="font-weight: bold">
+      The Machine Stops
+     </p>
+     <p class="copy-text">
+      E. M. Forster
+     </p>
+     <p class="copy-text" style="font-size: small; color: grey">
+      November 01, 1909
+     </p>
+     <div class="d-flex flex-wrap align-items-center">
+      <a href="https://www.amazon.co.uk/Machine-Stops-M-Forster/dp/1434442047" target="_blank">
+       <button class="btn btn-primary btn-md px-4 me-2" style="background-color: #C78226; border: 1px solid black;" type="button">
+        <i class="bi bi-book">
+        </i>
+       </button>
+      </a>
+      <span class="selected-value select-value-color-red">
+       Article
+      </span>
+      <span class="selected-value select-value-color-blue">
+       Digital Philosophy
+      </span>
+     </div>
+    </div>
+   </div>
+  </div>
   <div class="footer" style="position: relative">
    <p>
     Designed and built by Jordan Smith using plain old HTML and CSS
