add calendly plugin

--- a/skeletons/influences_head.html
+++ b/skeletons/influences_head.html
@@ -54,6 +54,12 @@
       </div>
     </div>
 
+    <!-- Calendly badge widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/jordanjwsmith', text: "Let's catch up", color: '#3c1518', textColor: '#ffffff', branding: true }); }</script>
+    <!-- Calendly badge widget end -->
+
     <div class="footer" style="position: relative">
         <p>Designed and built by Jordan Smith using plain old HTML and CSS</p>
     </div>
