--- a/skeletons/influences_head.html
+++ b/skeletons/influences_head.html
@@ -26,16 +26,16 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="padding-left:20px; padding-right: 20px; background-color: #d0c9c2;">
         <div class="uncollapsed-home" type="button"> 
-              <a class="nav-item nav-link" href="index.html"><i class="bi bi-house-door-fill" width="30" height="30" alt="home"></i></a>
+              <a class="nav-item nav-link" href="/"><i class="bi bi-house-door-fill" width="30" height="30" alt="home"></i></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="/about.html">ABOUT ME</a>
-            <a class="nav-item nav-link" href="/about.html">PROJECTS</a>
-            <a class="nav-item nav-link" href="/publications.html">PUBLICATIONS</a>
+            <a class="nav-item nav-link" href="/about">ABOUT ME</a>
+            <a class="nav-item nav-link" href="/projects">PROJECTS</a>
+            <a class="nav-item nav-link" href="/publications">PUBLICATIONS</a>
             <a class="nav-item nav-link active" style="border-bottom: 3px solid #ffffff;" href="#">INFLUENCES</a>
           </div>
     
